--- a/exercises/hero/hero_solution.css
+++ b/exercises/hero/hero_solution.css
@@ -7,3 +7,31 @@
     background-color: #f95a61;
     border: #f95a61;
 }
+
+.jumbotron {
+    background: url('iheartcode.jpeg') no-repeat;
+    background-width: 100%;
+    background-size: cover;
+    background-position: center;
+}
+
+.jumbotron h1 {
+    color: #f95a61;
+}
+
+.jumbotron p {
+    color: #ffffff;
+}
+
+#carousel {
+    text-align: center;
+}
+
+footer {
+    margin: 10px;
+    text-align: center;
+}
+
+footer a {
+    color: #333333;
+}
