styling the footer in solutions

--- a/exercises/contact/main.css
+++ b/exercises/contact/main.css
@@ -7,3 +7,12 @@
     background-color: #f95a61;
     border: #f95a61;
 }
+
+footer {
+    margin: 10px;
+    text-align: center;
+}
+
+footer a {
+    color: #333333;
+}
