--- a/exercises/gallery/main.css
+++ b/exercises/gallery/main.css
@@ -1,11 +1,6 @@
 .navbar {
     background-color: #f95a61;
     color: #fff;
-    margin-bottom: 2rem;
-}
-
-footer {
-  margin: 1rem;
 }
 
 .jumbotron .btn {
@@ -13,10 +8,11 @@ footer {
     border: #f95a61;
 }
 
-h2 {
-  margin: 2rem 0 1rem;
+footer {
+    margin: 10px;
+    text-align: center;
 }
 
-button {
-  margin-bottom: 1rem;
+footer a {
+    color: #333333;
 }
